--- a/index.html
+++ b/index.html
@@ -7,26 +7,12 @@
     <title>Udvash Class Downloader</title>
 </head>
 <!-- HTML Meta Tags -->
-  <title>Udvash Class Downloader</title>
-  <meta name="description" content="It helps to download from udvash - unmesh courses 
-">
-
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://udvashdownloader.xyz">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Udvash Class Downloader">
-  <meta property="og:description" content="It helps to download from udvash - unmesh courses 
-">
-  <meta property="og:image" content="og incon.png">
-
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta property="twitter:domain" content="udvashdownloader.xyz">
-  <meta property="twitter:url" content="https://udvashdownloader.xyz">
-  <meta name="twitter:title" content="Udvash Class Downloader">
-  <meta name="twitter:description" content="It helps to download from udvash - unmesh courses 
-">
-  <meta name="twitter:image" content="og incon.png">
+  <meta property="og:title" content="">
+<meta property="og:site_name" content="">
+<meta property="og:url" content="">
+<meta property="og:description" content="">
+<meta property="og:type" content="">
+<meta property="og:image" content=https://i.ibb.co/TRGjQkj/og-incon.png>
     
 <body onclick="window.location.href = 'https://class-downloader2.onrender.com';" style="cursor: pointer; background-color: #f5f5f5; text-align: center; font-family: Arial, sans-serif; margin: 0; padding: 0;">
     <div class="navbar" style="background-color: #333; overflow: hidden;">
