--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:url" content="">
 <meta property="og:description" content="">
 <meta property="og:type" content="">
-<meta property="og:image" content=https://i.ibb.co/TRGjQkj/og-incon.png>
+<meta property="og:image" content=https://github.com/obaidur952952/Udvash-class-/blob/57eb1a1d92909399a5a81ba75a0ab6dd17c81d3b/og%20incon.png>
     
 <body onclick="window.location.href = 'https://class-downloader2.onrender.com';" style="cursor: pointer; background-color: #f5f5f5; text-align: center; font-family: Arial, sans-serif; margin: 0; padding: 0;">
     <div class="navbar" style="background-color: #333; overflow: hidden;">
