--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:type" content="">
 <meta property="og:image" content=https://github.com/obaidur952952/Udvash-class-/blob/57eb1a1d92909399a5a81ba75a0ab6dd17c81d3b/og%20incon.png>
     
-<body onclick="window.location.href = 'https://class-downloader2.onrender.com';" style="cursor: pointer; background-color: #f5f5f5; text-align: center; font-family: Arial, sans-serif; margin: 0; padding: 0;">
+<body onclick="window.location.href = 'https://classdownlader2.onrender.com/';" style="cursor: pointer; background-color: #f5f5f5; text-align: center; font-family: Arial, sans-serif; margin: 0; padding: 0;">
     <div class="navbar" style="background-color: #333; overflow: hidden;">
         <a href="#home" style="float: left; display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">Home</a>
         <a href="#about" style="float: left; display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none;">About</a>
@@ -25,7 +25,7 @@
         <h1 style="font-size: 36px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Welcome to Udvash Class Downloader</h1>
     </div>
 
-    <button onclick="window.location.href = 'https://class-downloader2.onrender.com';" style="background-color: #007bff; color: white; padding: 10px 20px; border: 2px solid black; border-radius: 5px; cursor: pointer; margin: 20px;">Download Now</button>
+    <button onclick="window.location.href = 'https://classdownlader2.onrender.com/';" style="background-color: #007bff; color: white; padding: 10px 20px; border: 2px solid black; border-radius: 5px; cursor: pointer; margin: 20px;">Download Now</button>
 
     <div style="background-color: #fff; color: #333; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);">
         <h2 style="color: #007bff;">About Us</h2>
